提交并且忽略class文件

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,13 @@
 eclipse.preferences.version=1
+encoding//src/plot=UTF-8
 encoding//src/plot/CameraToXML.java=UTF-8
+encoding//src/plot/CameraToXML20170304.java=UTF-8
 encoding//src/plot/CameraToXML20171022.java=UTF-8
 encoding//src/plot/CameraToXML20171025.java=UTF-8
 encoding//src/plot/CameraToXML20171106.java=UTF-8
+encoding//src/plot/CameraToXML20180318.java=UTF-8
+encoding//src/plot/CameraToXML20180426.java=UTF-8
+encoding//src/plot/CameraToXML20180507.java=UTF-8
 encoding//src/plot/CameraToXMLbackup.java=GBK
 encoding//src/plot/CopyOfCameraToXML.java=UTF-8
 encoding//src/plot/JenaMethod.java=UTF-8
